--- a/src/scss/_app_sidebar.scss
+++ b/src/scss/_app_sidebar.scss
@@ -11,3 +11,9 @@ $submenu-bg-color: #2b2b2b !default;
 $submenu-bg-color-collapsed: #2b2b2b !default;
 $icon-bg-color: #2b2b2b !default;
 $icon-size: 35px !default;
+
+.pro-menu-item.active {
+  background: #474242;
+}
+
+@import '~react-pro-sidebar/dist/scss/styles.scss';
