--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "~toastr/toastr.scss";
 @import "/src/scss/app_toast";
 @import "/src/scss/app_sidebar";
+@import "/src/scss/app_table";
 
 .App {
   text-align: center;
