add logout to popover

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "/src/scss/app_toast";
 @import "/src/scss/app_sidebar";
 @import "/src/scss/app_table";
+@import "/src/scss/app_avatar";
 
 .App {
   text-align: center;
