--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "/src/scss/app_sidebar";
 @import "/src/scss/app_table";
 @import "/src/scss/app_avatar";
+@import "/src/scss/app_page";
 
 .App {
   text-align: center;
