--- a/src/scss/_app_page.scss
+++ b/src/scss/_app_page.scss
@@ -1,3 +1,15 @@
 .data-table {
   height: 60vh;
 }
+
+.main-content {
+  background-color: #F9FAFC;
+}
+
+.top-navbar {
+  background-color: #1d1d1d;
+}
+
+.MuiToolbar-regular.top-navbar {
+  min-height: 72px;
+}
