--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import "/src/scss/app_table";
 @import "/src/scss/app_avatar";
 @import "/src/scss/app_page";
+@import "/src/scss/app_progress";
 
 .App {
   text-align: center;
