--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "~toastr/toastr.scss";
+@import "/src/scss/app_color";
 @import "/src/scss/app_toast";
 @import "/src/scss/app_sidebar";
 @import "/src/scss/app_table";
