--- a/src/scss/_app_sidebar.scss
+++ b/src/scss/_app_sidebar.scss
@@ -4,16 +4,16 @@
 
 $sidebar-bg-color: #1d1d1d !default;
 $sidebar-color: #adadad !default;
-$sidebar-width: 270px !default;
-$sidebar-collapsed-width: 80px !default;
+$sidebar-width: 16.875rem !default;
+$sidebar-collapsed-width: 5rem !default;
 $highlight-color: #d8d8d8 !default;
 $submenu-bg-color: #2b2b2b !default;
 $submenu-bg-color-collapsed: #2b2b2b !default;
 $icon-bg-color: #2b2b2b !default;
-$icon-size: 35px !default;
+$icon-size: 2.1875rem !default;
 
 .pro-menu-item.active {
-  background: #474242;
+  background: $secondary-color;
 }
 
 @import '~react-pro-sidebar/dist/scss/styles.scss';
