--- a/src/scss/_app_table.scss
+++ b/src/scss/_app_table.scss
@@ -105,6 +105,7 @@
     padding: 2px 7px;
     cursor: pointer;
     border-radius: 3px;
+    color: $primary-color;
   }
 
   a:hover, span:hover {
@@ -113,7 +114,7 @@
 
   .active a, .active span {
     color: white;
-    background: #007bff;
+    background: $primary-color;
   }
 
   .disabled a, .disabled span {
