--- a/src/scss/_app_sidebar.scss
+++ b/src/scss/_app_sidebar.scss
@@ -13,7 +13,7 @@ $icon-bg-color: #2b2b2b !default;
 $icon-size: 2.1875rem !default;
 
 .pro-menu-item.active {
-  background: $secondary-color;
+  background: #3d3c3c;
 }
 
 @import '~react-pro-sidebar/dist/scss/styles.scss';
