--- a/src/scss/_app_page.scss
+++ b/src/scss/_app_page.scss
@@ -1,5 +1,6 @@
 .main-content {
   background-color: #F9FAFC;
+  max-height: 100vh;
 }
 
 .top-navbar {
@@ -9,3 +10,8 @@
 .MuiToolbar-regular.top-navbar {
   min-height: 72px;
 }
+
+.dashboard-container {
+  overflow: auto;
+  max-height: 100vh;
+} 
